# movie_reviews

./: 02_프로젝트_계획서 v1.1.md  README.md  프로젝트 기획안 v1.3.md
ADK/: 작업순서_안도겸.md
ADK/movie-docent/: .env  .env.example
ADK/rag/: data_loader.py  environment.yaml  main.py  requirements.txt  retriever_builder.py
ADK/rag 테스트용/: readme.md  vector_service.py
ADK/기획서/: RAG_아키텍처_설계.md  기획서.html  아마 최종 기획.md  영화_큐레이션_도슨트_앱_기획서.pptx  지능형_영화_도슨트_기획서_디자인.pptx  지능형_영화_도슨트_세련된_기획서.pptx  파일별_역할분담.md  파일별_역할분담_easy.md
ADK/리뷰 수집기/: readme.md  scraper.py
CJB/: main.py  schema.sql  script_tmi.py  streamlit_app.py  update_movies_tmdb.py  youtube_tmi.py
CJB/TMI/: fetch_web.py  gemini_tmi.py  script_tmi.py
LGU/: Model_Evaluation_Test.ipynb  checker.py  classifier.py  classifier_colab.ipynb  cleaner.py  fixer.py  movie_list.txt  re_classifier.py  re_classifier_colab.ipynb  run_guide.ipynb  sampler.py  scraper.py
data/: tagged_reviews.json  test_reviews_sample.json
data/original/: F1 더 무비_리뷰.json  그대들은 어떻게 살 것인가_리뷰.json  기생충_리뷰.json  대부_리뷰.json  듄_리뷰.json  라라랜드_리뷰.json  리얼_리뷰.json  매드 맥스 분노의 도로_리뷰.json  매트릭스_리뷰.json  메멘토_리뷰.json  범죄도시3_리뷰.json  범죄도시4_리뷰.json  베테랑2_리뷰.json  비상선언_리뷰.json  살목지_리뷰.json  살인의 추억_리뷰.json  서울의 봄_리뷰.json  스즈메의 문단속_리뷰.json  스파이더맨 노 웨이 홈_리뷰.json  조커_리뷰.json  (+13 more)
movie-docent/: .env  .env.example  README.md  pyproject.toml  사용법.txt  패치노트.txt
movie-docent/config/: settings.py
movie-docent/data/: review_sample.json  미이라_리뷰.json  왕과 사는 남자_리뷰.json
movie-docent/frontend/: streamlit_app.py
movie-docent/movie_docent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
movie-docent/scripts/: list_embedding_models.py
movie-docent/src/api/: main.py
movie-docent/src/api/routes/: chat.py  health.py  movies.py  tmi.py
movie-docent/src/core/: observability.py  types.py
movie-docent/src/db/: client.py  schema.sql
movie-docent/src/db/repositories/: cache_repo.py  movies_repo.py  reviews_repo.py  tmi_repo.py
movie-docent/src/ingestion/crawlers/: duckduckgo_client.py
movie-docent/src/ingestion/embedding/: run.py
movie-docent/src/providers/: base.py
movie-docent/src/providers/embedding/: __init__.py  gemini.py
movie-docent/src/providers/llm/: gemini.py
movie-docent/src/rag/: checkpointer.py  graph.py
movie-docent/src/rag/chains/: mvp_chain.py
movie-docent/src/rag/nodes/: cache_check.py  generate.py  ground.py  retrieve.py  route_query.py  save_cache.py
movie-docent/src/rag/parsers/: answer_parser.py
movie-docent/src/rag/prompts/: router.py
movie-docent/src/rag/retrievers/: self_query.py
(+33 files in other folders)
